nav alignment fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -369,12 +369,6 @@ hr.line {
    EXTENDED NAVIGATION
    =============================== */
 
-@media only screen and (max-width: 820px) {
-    .widget .extendednavigation {
-        max-width:350px;
-    }
-}
-
 .tabletmob-nav {
     display: none;
     background-color: darken(@color-swatch1,10%);
@@ -398,7 +392,6 @@ hr.line {
         padding:10px 0px;
         display:inline-block;
         float:right;
-        width: 65%;
         @media @tablet {
             background-color: transparent;
         }
@@ -408,7 +401,6 @@ hr.line {
             }
         }
         ul {
-            text-align: center;
             padding: 0;
             @media @tablet {
                 /* Hidden until nav icon is clicked */
@@ -1795,6 +1787,13 @@ blockquote:before {
         float:none;
         margin-right:0;
     }
+    .widget .extendednavigation ul.align-right li.folder:after {
+        left: 5px;
+        right: inherit;
+    }
+    .widget .extendednavigation ul li.folder .text:after{
+        padding-right: 0;
+    }
 
 }
 
@@ -1809,9 +1808,6 @@ blockquote:before {
     .widget.extendednavigation ul.align-right li.folder {
         background-position: 12px center;
         padding-right: 10px;
-    }
-    .widget .extendednavigation ul li.folder .text:after{
-        padding-right: 0;
     }
     .widget .extendednavigation a.menu-pull:after {
         right: 38%;
